<resources>
    <string name="app_name">DidaktikApp_Zazpikaleak</string>
    <string name="btnMenuPrincipal">Empezar</string>
    <string name="txtBienvenidaApp_Dingdong">¡Hola, me llamo Din Don y voy a ser vuestro guía durante esta aventura!</string>
    <string name="txtBienvenidaContinuacionApp_Dingdong">¡Bienvenid@ de nuevo, continuemos con nuestra aventura!</string>
    <string name="txtReseteoBase">Con esta acción perderás todas las paradas que has realizado y se eliminarán todos los jugadores.\n\n¿Estás seguro de querer empezar de nuevo?</string>
    <string name="creditos">\@DinDon2023</string>
    <string name="creditosCJ">\tAiram Brito\n\tAlayn Marcos\n\tEmma Vélez\n\tMiguel Angel Fuente </string>
    <string name="creditosUPV">\tAmaia Quintanilla\n\tLeire Taboada\n\tOlatz Sagastizabal</string>
    <string name="txtZona1_Titulo">Mercado de la Ribera e Iglesia y Puente de San Antón</string>
    <string name="txtZona1_Narrador_1">En el Casco Viejo y a orillas de la ría tenemos el Mercado de la Ribera. Siglos atrás era un mercado de calle, y no fue hasta el año 1929 cuando se inauguró el actual Mercado de la Ribera.</string>
    <string name="txtZona1_Narrador_2"> ¿Sabíais que en 1990 ganó un Guinness World Records? En esa época, era el mercado cubierto más grande de Europa.
        Dentro hay más de 50 puestos de comida. Además, a veces se hacen conciertos. ¿Habéis estado alguna vez? ¿Qué comprasteis?\n\n

        Un poco más arriba del mercado está la iglesia de San Antón. No es la más antigua de Bilbao, pero sí una de las más importantes.
        ¿Sabéis por qué? Esta Iglesia y el puente de San Antón aparecen en el escudo de la ciudad y en el escudo del Athletic Club.

    </string>
    <string name="txtZona1_Dingdong">Ahora visitaremos el mercado y una vez hayáis terminado de verlo todo, nos dirigiremos al puente de San Antón.\n\nCuando estéis allí, pulsad el botón de la parada correspondiente para que os enseñe un juego.</string>
    <string name="txtZona1_5">Próxima Parada</string>
    <string name="txtZona1_5_DingDon">¿Ya sabéis de qué lugar se trata? ¡Pues, en marcha!</string>
    <string name="txtZona1_5_Hint">Arenal e Iglesia de San Nicolás</string>
    <string name="btnZona1_Siguiente">Siguiente</string>
    <string name="txtZona1_3Dingdong">En este juego deberás hacer de forma individual, parejas de las diferentes fotos de las paradas</string>
    <string name="txtZona1_5_Explicacion">Para desvelar el lugar, haz click en la foto</string>
    <string name="txtZona2_1_Titulo">El Arenal y la Iglesia de San Nicolás</string>
    <string name="txtZona2_1_Explicacion">El objetivo aquí es intentar sacar una foto con la misma perspectiva que la foto antigua. ¿Podrás conseguirlo?</string>
    <string name="txtZona2_1_Dingdon">¡Genial! Ahora tenéis que comparar la foto antigua y la actual.</string>
    <string name="txtZona2_4_Titulo">El Arenal y la Iglesia de San Nicolas</string>
    <string name="txtZona2_4_Narrador_1">La Iglesia de San Nicolás se inauguró en el año 1756 y tardaron 13 años en construirla. En la fachada, es decir, la parte de fuera de la Iglesia, podemos encontrar la entrada principal y dos torres a cada lado.

\n\nLa zona donde estamos ahora mismo se llama El Arenal. ¿Por qué creéis que se llama así? Pues su nombre se debe a que antiguamente fue una especie de playa donde paraban los barcos.</string>
    <string name="txtZona2_4_Narrador_2">Cuando aparecieron los barrios de alrededor, la playa se cerró y el lugar se llenó de jardines, bancos y fuentes. Más tarde, se empezaron a hacer carreteras y el paso del Metro por debajo del paseo.</string>
    <string name="btnZona2_1_Camara">Sacar Foto</string>
    <string name="txtZona2_5Dingdong">¿Estais listos y listas para ir a la siguiente parada? ¡Vámonos!</string>
    <string name="txtZona3_1_Titulo">Ría de Bilbao</string>
    <string name="txtZona3_1_Narrador_1">¿Conocéis la leyenda de la ría de Bilbao? Un padre y una madre llamados Francisco y María, tenían cuatro hijos. María mandó a uno de sus cuatro hijos a Bilbao a estudiar.
        Un día por la noche, se fue a nadar con unos amigos. Había habido inundaciones y la corriente se llevó al joven, por lo que desapareció y no se volvió a saber más de él. </string>
    <string name="txtZona3_1_Narrador_2">Cinco años después, unos pescadores dijeron que habían visto un animal acuático que parecía humano. Tras ser visto otras veces, capturaron al animal y vieron que era un hombre con escamas y forma de pez.
    No se volvió a hablar de él y tras ser expuesto como monstruo de feria, desapareció en el mar y no se supo nunca nada más sobre él. ¿Qué os parece esta leyenda? ¿Habéis oído hablar de ella?</string>
    <string name="txtZona3_1_Narrador_3">Este chico se ahogó en las inundaciones que hubo en el siglo XVII, pero ¿sabéis que hubo nuevas inundaciones más recientemente? Durante la tarde y noche del 26 de Agosto de 1983 y celebrándose la Aste Nagusia de Bilbao, llovió mucho y la ría se desbordó.
Subió el nivel del agua varios metros, las calles se inundaron, se llenaron de barro y hubo gente que murió o acabó con heridas graves. Aunque hubo mucha gente que ayudó, tardaron muchos días en limpiarlo todo.</string>
    <string name="zona3_1_pasos">Pulsar el botón para hacer los grupos \n\n2.-Escribir una leyenda que contega las palabras barro, peces y puente \n\n3.-Pulsar el botón orden para saber el orden que tenéis que leer \n\n4.- Leer la leyenda</string>
    <string name="btnZona3_2_HACER_LOS_GRUPOS">Hacer los grupos</string>
    <string name="btnZona3_2_Escribe_leyenda">Escribe la leyenda</string>
    <string name="btnZona3_2_ORDEN">Orden</string>
    <string name="que_rima_mas_original">Que rima más original</string>
    <string name="escribe_tu_rima">Escribe tu rima sobre la baldosa</string>
    <string name="txtBienHecho">¡Bien hecho!</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="textoPregunta1">¿Dónde está la hucha de los txikiteros?</string>
    <string name="textoPregunta2">¿Desde qué decada lleva aquí la hucha?</string>
    <string name="textoPregunta3">¿Quién puede meter el dinero en la hucha?</string>
    <string name="textoPregunta4">¿Qué se hace con el dinero?</string>
    <string name="txtZona3_1Dingdong">Ahora por grupos tenéis que inventaros una leyenda de entre 30 a 40 palabras que y tienen que aparecer las palabras: <font color='#EE0000'>BARRO - PUENTE - PECES</font></string>
    <string name="txtZona3_2Dingdong">¡Me ha encantado vuestra leyenda!</string>
    <string name="txtZona3_2Dingdong_parte2">Como ya habéis leído todas vuestras leyendas, ¡Podemos pasar a la siguiente parada!</string>
    <string name="zonas4_1_pasos">1.- Pulsar el botón para hacer los grupos \n\n2.-Escribir una rima que contega la palabra baldosa \n\n3.-Pulsar el botón comprobar</string>
    <string name="txtZona4_6_Titulo">La Baldosa de Bilbao</string>
    <string name="txtZona4_6_TituloDibujo">Dibuja la Baldosa de Bilbao</string>
    <string name="txtZona4_6_Narrador_1">¿Sabéis que tiene de especial este suelo? La baldosa de Bilbao aparece en objetos como prendas de vestir, complementos, pasteles y en la canción que La Otxoa le dedicó que ya habéis escuchado.</string>
    <string name="txtZona4_6_Narrador_2">¿No habéis visto este año en Aste Nagusi este tipo de pañuelos?</string>
    <string name="txtZona4_6_Narrador_3">La baldosa tiene un dibujo muy especial,  hay un círculo en el medio rodeado de otros cuatro círculos más pequeños, para que el agua se deslice. Se crearon sobre 1920 con materiales cogidos de los Altos Hornos de Vizcaya. ¿Cuántas baldosas creeis que puede haber en Bilbao? 66 millones de baldosas están puestas por las aceras de Bilbao.</string>
    <string name="txtZona5_2_Titulo">Marijaia</string>
    <string name="txtZona5_2_Narrador_1">¿Qué sabéis sobre Marijaia? Marijaia es el icono de Aste Nagusia. Lleva los brazos en alto para representar que siempre está bailando. Cada año se crea una nueva Marijaia. \n\nSu momento más importante es en el txupinazo, cuando aparece cada año para presentarse a la gente y dar inicio a las fiestas.
        \n\nPero podéis ver a Marijaia otros días también, ya que Marijaia puede ser encontrada por todo Bilbao, sacándose fotografías. \n\nEl último día de fiestas, queman a Marijaia durante un paseo por la Ría.</string>
    <string name="zonas5_1_pasos">1.-Mantener pulsada la pieza que quieres mover \n\n2.-Arrastrar y soltar la pieza en la zona que elijas (Solo se quedará si está bien)</string>
    <string name="zona5_1puzzle_de_marijaia">Puzzle de Marijaia</string>
    <string name="txtZona6_2Dingdong">Debes buscar diferentes personas por la calle para que respondan estas preguntas. \n\nLa respuesta de cada pregunta está debajo de ella. \n\nSi acierta deberás pulsar el botón verde para pasar a la siguiente, en caso contrario, pulsa el botón rojo que contará los fallos en esa pregunta. \n\nSolo una por persona</string>
    <string name="txtZona6_4_Titulo">Calle Pelota y la Hucha de los Txikiteros</string>
    <string name="txtZona6_4_Narrador_1">El Casco Viejo tiene muchos bares que están en la ruta de los pintxos o del txikiteo. Los txikiteros son un grupo de amigos que quedan en el Casco Viejo para comer pintxos y tomar txikitos (vasos de vino), de ahí su nombre. Al principio y durante muchos años, fue una tradición totalmente masculina y las mujeres no podían hacerlo. En los últimos años las mujeres han podido ir con los hombres.</string>
    <string name="txtZona6_4_Narrador_2">Los txikiteros y las txikiteras para pagar ponen un bote y al final del día, el dinero que les ha sobrado de ese bote lo echan a la hucha solidaria de la calle Pelota. Cualquier persona puede meter dinero ya que cada 11 de octubre (Día del Txikitero) se abre la hucha para recoger los ahorros y donarlos a causas benéficas. ¿Qué os parece esta idea? </string>
    <string name="en_la_calle_pelota">En la calle pelota</string>
    <string name="el_dinero_se_dona">El dinero se dona</string>
    <string name="cualquiera_puede">Cualquiera puede</string>
    <string name="d_cada_de_los_90">Década de los 90</string>
    <string name="pregunta_sin_miedo">Pregunta sin miedo !!!</string>
    <string name="txtZona7_1_Titulo">Plaza Nueva</string>
    <string name="txtZona7_1_Narrador_1">¿Alguna vez habéis estado aquí? ¿Para qué habéis venido? La Plaza Nueva es un lugar increíble para los que coleccionan cosas. Todos los domingos hay un mercadillo y se pueden encontrar todo tipo de antigüedades, monedas, sellos, flores, etc. </string>
    <string name="txtZona7_1_Narrador_2">Además, los domingos por la mañana es muy habitual ver a niños y niñas como vosotros y vosotras intercambiando cromos. ¿Habéis hecho alguna colección de cromos y habéis venido a la Plaza Nueva a intercambiarlos? </string>
    <string name="lblZona8_2_MercadoDeLaRivera">Mercado de la Ribera</string>
    <string name="Zona8_2_PuenteeIglesiadeSanAntón">Puente e Iglesia de San Antón</string>
    <string name="Zona8_2_IglesiaDeSanNicolas">Iglesia de San Nicolás</string>
    <string name="Zona8_2_Marijaia">Marijaia</string>
    <string name="Zona8_2_RiaDeBilbao">Ría de Bilbao</string>
    <string name="Zona8_2_HuchaDeTxikitero">Hucha de Txikitero</string>
    <string name="Zona8_2_TeatroArriaga">Teatro Arriaga</string>
    <string name="Zona8_2_PlazaNueva">Plaza Nueva</string>
    <string name="zonas8_2_pasos">1.-Mantener pulsado el texto que quieres mover \n\n2.-Arrastrar y soltar el texto en la imagen que elijas (Si se pone verde es que lo has hecho bien)</string>
    <string name="zonas8_2_felcicitaciones">    ¡Enhorabuena, eres capaz de reconocer el patrimonio del Casco Viejo!
        Ahora, ya sabes lo que esconde esta zona de Bilbao.</string>
</resources>