<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Zona1_2"
    android:background= "@color/fondo">

    <TextView
        android:id="@+id/txtZona1_2_Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txtZona1_Titulo"
        android:textAlignment="center" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp">


        <TextView
            android:id="@+id/txtZona1_2_Dingdong"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/bocadillo_cuadrado"
            android:fontFamily="@font/nunitoregular"
            android:paddingHorizontal="30dp"
            android:paddingVertical="70dp"
            android:text="@string/txtZona1_Dingdong"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imgZona1_2_Dingdong"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:src="@drawable/dindonfunko" />

    </RelativeLayout>

    <Button
        android:id="@+id/zona1_2_btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/btnZona1_Siguiente">
    </Button>



</LinearLayout>