<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background= "@color/fondo"
    tools:context=".Zona1_5">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo"
        android:fontFamily="@font/nunitomedium"
        android:paddingTop="40dp"
        android:paddingHorizontal="30dp"
        android:text="@string/txtZona1_5"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunitoregular"
                android:text="@string/txtZona1_5_Explicacion" />


            <ImageView
                android:id="@+id/imgZona1_5_Foto"
                android:layout_width="346dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:layout_height="179dp"
                app:srcCompat="@drawable/zona1_5_fotoantigua" />


            <TextView
                android:id="@+id/txtZona1_5_Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunitoregular"
                android:text="@string/txtZona1_5_Hint"
                android:visibility="invisible"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="0dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="56dp"
                    android:background="@drawable/bocadillo_cuadrado"
                    android:fontFamily="@font/nunitoregular"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="50dp"
                    android:text="@string/txtZona1_5_DingDon"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="right"
                    android:src="@drawable/dindonfunko" />

            </RelativeLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/zona1_5_btnSiguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:backgroundTint="#5020C2"
                android:src="@drawable/ic_siguiente"
                app:fabSize="normal"
                android:visibility="invisible"
                android:layout_gravity="right"
                app:showMotionSpec="@android:anim/fade_in"
                app:useCompatPadding="true" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>